src/test/deca/context/valid/provided/unaryExpr.deca
/* Description:
     tester l'affichage expression unitaire

    Historique:
      cree le 08/01/2020
*/
{
   int x =2 ;
   boolean y ;

   !y;
   -x;
}
